<resources>
    <string name="app_name">storeDAM</string>
    <string name="titulo_login">Iniciar Sesion</string>
    <string name="str_usuario">USERNAME</string>
    <string name="str_contrasena">PASSWORD</string>
    <string name="txt_iniciar">SIGN IN</string>
    <string name="txt_registrar_login">SIGN UP</string>
    <string name="txt_nombres">NAME</string>
    <string name="txt_apellidos">LAST NAME</string>
    <string name="txt_email">EMAIL</string>
    <string name="txt_contrasena">PASSWORD</string>
    <string name="txt_chechbox">TERMS OF SERVICE</string>
    <string name="txt_registrar">FINISH</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="txt_add_product">Agregar Producto</string>
    <string name="txt_name">Nombre: </string>
    <string name="txt_hint_nombre_producto">Product Name</string>
    <string name="txt_hint_categoria_producto">Product Category</string>
    <string name="txt_hint_precio_producto">Product Price</string>
    <string name="chb_inStock">In Stock</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_productos">Products</string>
    <string name="txt_aceptaTerminos">Aceptar</string>
    <string name="txt_noAceptaTerminos">No Aceptar</string>
    <string name="txt_desc_user">Usuario</string>
    <string name="txt_desc_pass">Contraseña</string>

    <!-- strings terminos y condiciones -->
    <string name="title_politica">POLÍTICA DE PRIVACIDAD</string>
    <string name="txt_p1">El presente Política de Privacidad establece los términos en que DAM store usa y protege la información que es proporcionada por sus usuarios al momento de utilizar su sitio web. Esta compañía está comprometida con la seguridad de los datos de sus usuarios. Cuando le pedimos llenar los campos de información personal con la cual usted pueda ser identificado, lo hacemos asegurando que sólo se empleará de acuerdo con los términos de este documento. Sin embargo esta Política de Privacidad puede cambiar con el tiempo o ser actualizada por lo que le recomendamos y enfatizamos revisar continuamente esta página para asegurarse que está de acuerdo con dichos cambios.</string>
    <string name="subtxt1">Información que es recogida</string>
    <string name="txt_p2">Nuestro sitio web podrá recoger información personal por ejemplo: Nombre,  información de contacto como  su dirección de correo electrónica e información demográfica. Así mismo cuando sea necesario podrá ser requerida información específica para procesar algún pedido o realizar una entrega o facturación.</string>
    <string name="subtxt2">Uso de la información recogida</string>
    <string name="txt_p3">Nuestro sitio web emplea la información con el fin de proporcionar el mejor servicio posible, particularmente para mantener un registro de usuarios, de pedidos en caso que aplique, y mejorar nuestros productos y servicios.  Es posible que sean enviados correos electrónicos periódicamente a través de nuestro sitio con ofertas especiales, nuevos productos y otra información publicitaria que consideremos relevante para usted o que pueda brindarle algún beneficio, estos correos electrónicos serán enviados a la dirección que usted proporcione y podrán ser cancelados en cualquier momento.
DAM store está altamente comprometido para cumplir con el compromiso de mantener su información segura. Usamos los sistemas más avanzados y los actualizamos constantemente para asegurarnos que no exista ningún acceso no autorizado.
</string>


    <string-array name="Categorias">
        <item>Futbol</item>
        <item>Baloncesto</item>
        <item>Tenis</item>
        <item>Natacion</item>
        <item>Beisbol</item>
        <item>Carreras</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_salir">Salir</string>

</resources>