<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c6"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/dam2"></ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_usuario"
            android:layout_margin="10dp"
            android:inputType="textEmailAddress"
            app:startIconContentDescription="@string/txt_desc_user"
            app:startIconDrawable="@drawable/ic_baseline_group_24">
            <!--   style="@style/edt_login"> -->
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_contrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_contrasena"
            android:layout_margin="10dp"
            android:inputType="textEmailAddress"
            app:startIconContentDescription="@string/txt_desc_user"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_iniciar"
            style="@style/btn_general"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_iniciar"></Button>

        <Button
            android:id="@+id/btn_registro"
            style="@style/btn_general"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_registrar_login"></Button>
    </LinearLayout>

</LinearLayout>