<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/c6"
    android:orientation="vertical"

    tools:context=".ProductoFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/dam2"></ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txt_add_product"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_nombre_producto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_hint_nombre_producto"
            android:layout_margin="10dp"
            android:inputType="text"
            app:startIconContentDescription="@string/txt_name"
            app:startIconDrawable="@drawable/ic_baseline_add_box_24">
            <!--   style="@style/edt_login"> -->
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_categoria_producto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_hint_categoria_producto"
            android:layout_margin="10dp"
            android:inputType="text"
            app:startIconContentDescription="@string/txt_name"
            app:startIconDrawable="@drawable/ic_baseline_add_box_24">
            <!--   style="@style/edt_login"> -->
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_precio_producto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_hint_precio_producto"
            android:layout_margin="10dp"
            android:inputType="number"
            app:startIconContentDescription="@string/txt_name"
            app:startIconDrawable="@drawable/ic_baseline_add_box_24">
            <!--   style="@style/edt_login"> -->
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:text="@string/chb_inStock"></CheckBox>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">


            <Button
                android:id="@+id/btn_cancelar_Agregar_producto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:layout_margin="10dp"
                android:text="Cancelar"></Button>

            <Button
                android:id="@+id/btn_agregar_producto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:layout_margin="10dp"
                android:text="Agregar"></Button>
        </LinearLayout>










    </LinearLayout>


</FrameLayout>